--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=healio
+
+spring.datasource.url=jdbc:mysql://localhost:3306/healio
+spring.datasource.username=root
+spring.datasource.password=sqlAccess
+
+spring.jpa.hibernate.ddl-auto=update
