feat: add RabbitMQ configuration and controllers for booking and slot management test: verified booking flow publishes to notification queue fix: resolve re-booking of appointment issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,14 @@ spring.datasource.username=root
 spring.datasource.password=sqlAccess
 
 spring.jpa.hibernate.ddl-auto=update
+
+# RabbitMQ connection
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+# Optional: enable publisher confirms for reliability
+spring.rabbitmq.publisher-confirm-type=correlated
+spring.rabbitmq.publisher-returns=true
+
