Add PayU payment integration: create order, hash generation, callback endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,8 @@ spring.rabbitmq.password=guest
 spring.rabbitmq.publisher-confirm-type=correlated
 spring.rabbitmq.publisher-returns=true
 
+# PayU sandbox (test) credentials
+payu.merchant.key=1RBOVz
+payu.merchant.salt=Unz5ZLBBqIIb3P8aPwQh1rrx19Ph1Bfv
+payu.base.url=https://test.payu.in/_payment
+
