--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,14 @@ payu.merchant.key=1RBOVz
 payu.merchant.salt=Unz5ZLBBqIIb3P8aPwQh1rrx19Ph1Bfv
 payu.base.url=https://test.payu.in/_payment
 
+#smtp-config
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hackmates12@gmail.com
+spring.mail.password=yqsaelxpitermgkl
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#optional: debug
+spring.mail.properties.mail.debug=true
+
